syntax = "proto3";

package greet;
option go_package = "proto";

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message HelloWorldRequest {
    Greeting greeting = 1;
}

message HelloWorldResponse {
    string result = 1;
}

message HelloWorldRepeatedRequest {
    Greeting greeting = 1;
    int32 repeat = 2;
}

message HelloWorldRepeatedResponse {
    string result = 1;
}

message HelloWorldLongRequest {
    Greeting greeting = 1;
}

message HelloWorldLongResponse {
    string result = 1;
}

message HelloWorldEveryoneRequest {
    Greeting greeting = 1;
}

message HelloWorldEveryoneResponse {
    string result = 1;
}

service HelloWorldService {
    // Unary Operation
    rpc HelloWorld (HelloWorldRequest) returns (HelloWorldResponse) {
    };

    // Server Streaming
    rpc HelloWorldRepeated (HelloWorldRepeatedRequest) returns (stream HelloWorldRepeatedResponse) {
    };

    // Client Streaming
    rpc HelloWorldLong (stream HelloWorldLongRequest) returns (HelloWorldLongResponse) {
    };

    // Bidirectional Streaming
    rpc HelloWorldEveryone (stream HelloWorldEveryoneRequest) returns (stream HelloWorldEveryoneResponse) {
    };
}